fix error on mobile causing navbar to block text

--- a/CSS/app.css
+++ b/CSS/app.css
@@ -196,13 +196,17 @@ h3 {
 }
 @media (max-width: 768px) {
   .navbar {
-    width: 100vw; /* Full width */
+    width: max-content; /* view width */
     height: auto; /* Adjust height automatically */
     bottom: 0; /* Position at the bottom */
     top: auto; /* Remove top positioning */
+    background: var(--background-primary);
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 
   .navbar-nav {
+    width: auto;
     flex-direction: row; /* Align items in a row instead of a column */
     justify-content: center; /* Center items horizontally */
     flex-grow: 1;
@@ -221,7 +225,7 @@ h3 {
 
   main {
     margin-left: 0; /* Remove the left margin */
-    margin-top: 60px; /* Add some space at the top to avoid overlapping with the navbar */
+    margin-bottom: 10px; /* Add some space at the bottom to avoid overlapping with the navbar */
   }
   h1 {
     font-size: 2rem;
